--- a/src/style.less
+++ b/src/style.less
@@ -1,7 +1,7 @@
-.apsisx-calendar{
+.mpvue-calendar{
   position: relative;
   width: 300px;
-  &.apsisx-calendar-mode-week{
+  &.mpvue-calendar-mode-week{
     .vc-calendar-info{
       cursor: inherit;
     }
